--- a/src/app/search-item/search-item.component.html
+++ b/src/app/search-item/search-item.component.html
@@ -1,5 +1,5 @@
-
-  <div class="search-item__image-wrapper" [ngClass]="{'search-item__image-wrapper--grid' : settings.gridView}">
+  <span class="search-item__color"></span>
+  <div class="search-item__image-wrapper" [ngStyle]="{'border-color': image.color}" [ngClass]="{'search-item__image-wrapper--grid' : settings.gridView}">
     <i class="material-icons">
       image
     </i>
