--- a/src/app/search-item/search-item.component.scss
+++ b/src/app/search-item/search-item.component.scss
@@ -7,7 +7,9 @@
   position: relative;
   height: 100%;
   transition: background-color 0.2s ease-in-out;
-
+  &:not(:last-of-type) {
+    border-bottom: 1px solid var(--primary-border-color);
+  }
   @include res(phone) {
     flex-direction: row;
   }
@@ -25,7 +27,6 @@
 :host(.search-item--grid) {
     display: flex;
     flex-direction: column;
-    border-bottom: 0 !important;
     margin-bottom: 1rem !important;
 
     &:hover {
@@ -35,6 +36,8 @@
 }
 
 .search-item {
+  position: relative;
+
   &__image-wrapper {
     min-width: 128px;
     width: 100%;
@@ -46,6 +49,8 @@
     overflow: hidden;
     position: relative;
     margin-bottom: 0.5rem;
+    border-bottom-width: 4px;
+    border-bottom-style: solid;
 
     @include res(phone) {
       width: 128px;
@@ -108,15 +113,18 @@
     display: inline-block;
     text-transform: uppercase;
     color: #fff;
-    font-weight: 500;
     padding: 0.5rem 1rem;
     text-decoration: none;
-    background-color: var(--primary-color);
+    background: linear-gradient(-45deg, var(--primary-color), var(--secondary-color));
+    background-size: 400%;
     font-size: 0.875em;
+    font-weight: bold;
+    animation: buttonAnimation 10s linear infinite;
+    transition: background-size 0.2s ease-in-out;
 
     &:hover,
     &:focus {
-      opacity: 0.5;
+      background-size: 100%;
     }
   }
 
@@ -163,6 +171,7 @@
     text-decoration: none;
     background: linear-gradient(to bottom, var(--primary-color) 0%, var(--primary-color) 100%) repeat-x 0 100%;
     background-size: 2px 2px;
+
     transition: background-size .2s, color .2s;
     padding-left: 3px;
     padding-right: 3px;
@@ -185,5 +194,17 @@
         -webkit-box-orient: vertical;
       }
     }
+  }
+}
+
+@keyframes buttonAnimation {
+  0% {
+   background-position: 0 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+     background-position: 0 50%
   }
 }
