Add simple modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -116,15 +116,19 @@
   </section>
 
   <section class="image-list-view container" [ngClass]="{'image-list-view--grid' : settings.gridView}">
+    <!--                       (click)="goToImageWebsite(image.links.html)"-->
+
     <ng-container *ngFor="let image of images">
+      <div  (click)="openModal(image)" >asd</div>
       <app-search-item class="search-item"
                        [ngClass]="{'search-item--grid' : settings.gridView}"
-                       (click)="goToImageWebsite(image.links.html)"
                        [image]="image" [settings]="settings"></app-search-item>
     </ng-container>
 
   </section>
 
 </div>
+
+<app-modal id="modal"></app-modal>
 
 <button class="button scroll-to-top" (click)="scrollToTop()"><i class="material-icons"> keyboard_arrow_up </i></button>
