Dark mode into modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -124,6 +124,6 @@
 
 </div>
 
-<app-modal id="modal"></app-modal>
+<app-modal id="modal" [ngClass]="{'dark-mode': darkMode}"></app-modal>
 
 <button class="button scroll-to-top" (click)="scrollToTop()"><i class="material-icons"> keyboard_arrow_up </i></button>
