--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,9 @@
   --modal-background: #fff;
   --text-button-color: #fff;
   --item-background: #fff;
-
+  --modal-header-background-color: #fff;
+  --details-title-color: #757575;
+  --details-value-color: #222;
   --font: 'Open Sans', sans-serif;
 }
 
@@ -37,7 +39,9 @@
   --modal-background: #000;
   --text-button-color: #fff;
   --item-background: #000;
-
+  --modal-header-background-color: #000;
+  --details-title-color: #fff;
+  --details-value-color: #fff;
   --font: 'Montserrat', sans-serif;
 }
 
