--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <header class="header">
   <div class="header__container">
     <form action="" class="search-form" [formGroup]="searchForm" autocomplete="off">
+      <button (click)="toggleHistory($event)"  class="actions__button button button--no-border-radius" *ngIf="historyItems.length > 0">
+        <i class="actions__icon material-icons" aria-hidden="true" *ngIf="!settings.showHistory">keyboard_backspace</i>
+      </button>
       <label for="search-text" class="hide-for-user">Search term</label>
       <input autofocus required type="search" id="search-text" class="search-form__input"
              placeholder="eg. puppies" formControlName="searchText" (focusout)="focusOut($event.target.value)">
@@ -83,6 +86,13 @@
           <label class="settings-form__label" for="crop-description">Crop description after second line in grid
             view</label>
         </div>
+        <div class="settings-form__group">
+          <input type="checkbox" class="settings-form__checkbox" id="modal-details"
+                 [(ngModel)]="settings.modalDetails"
+                 [ngModelOptions]="{standalone: true}">
+          <label class="settings-form__label" for="modal-details">Show modal instead of go to photos website
+            view</label>
+        </div>
       </form>
     </div>
   </div>
@@ -91,6 +101,9 @@
 <app-welcome *ngIf="!res"></app-welcome>
 <app-ie *ngIf="settings.ieMode"></app-ie>
 <div class="content" id="content" *ngIf="res">
+
+  <iframe class="iframe-preview" src="https://unsplash.com/"></iframe>
+
   <section class="toolbar container">
     <ng-container *ngIf="res.total > 0">
       <section class="statistic">
@@ -111,11 +124,10 @@
   </section>
 
   <section class="image-list-view container" [ngClass]="{'image-list-view--grid' : settings.gridView}">
-    <!--                       (click)="goToImageWebsite(image.links.html)"-->
 
     <ng-container *ngFor="let image of images">
-      <div  (click)="openModal(image.id)" >asd</div>
       <app-search-item class="search-item"
+                       (click)="openModal([image.id, image.links.html])"
                        [ngClass]="{'search-item--grid' : settings.gridView}"
                        [image]="image" [settings]="settings"></app-search-item>
     </ng-container>
