--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -267,6 +267,15 @@
   }
 }
 
+.iframe-preview {
+  width: 1160px;
+  max-width: 100%;
+  height: 50vh;
+  display: block;
+  border: 0;
+  margin: 0 auto 1rem auto;
+}
+
 .settings-form {
   display: flex;
   flex-wrap: wrap;
