--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -20,19 +20,19 @@
 
       <div class="item">
         <div class="item__content">
-          <dt class="item__title"> Author <i class="material-icons item__icon"> low_priority </i></dt>
+          <dt class="item__title"> Author <i class="material-icons item__icon"> person </i></dt>
           <dd class="item__value">{{ image?.user.name }}</dd>
         </div>
       </div>
       <div class="item">
         <div class="item__content">
-          <dt class="item__title"> Username <i class="material-icons item__icon"> low_priority </i></dt>
+          <dt class="item__title"> Username <i class="material-icons item__icon"> account_circle </i></dt>
           <dd class="item__value">{{ image?.user.username }}</dd>
         </div>
       </div>
       <div class="item">
         <div class="item__content">
-          <dt class="item__title"> Website <i class="material-icons item__icon"> low_priority </i></dt>
+          <dt class="item__title"> Website <i class="material-icons item__icon"> link </i></dt>
           <dd class="item__value"><a class="item__link link" [href]="image?.user.portfolio_url">{{ image?.user.portfolio_url }}</a>
           </dd>
         </div>
@@ -40,7 +40,7 @@
       <div class="item">
         <div class="item__content">
           <dt class="item__title"> Photo id <i class="material-icons item__icon"> low_priority </i></dt>
-          <dd class="item__value">{{ image?.id }}</dd>
+          <dd class="item__value"><a [href]="image?.links.html" target="_blank" class="item__link link">{{ image?.id }}</a></dd>
         </div>
       </div>
       <div class="item">
