--- a/src/app/search-item/search-item.component.html
+++ b/src/app/search-item/search-item.component.html
@@ -35,7 +35,7 @@
   <p class="search-item__description"
      [ngClass]="{'cropped': settings.croppedDescription, 'search-item__description--grid': settings.gridView}">{{image.description}}</p>
 
-  <a class="search-item__button text-button" href="{{ image.links.html }}" (click)="$event.stopPropagation()">View</a>
+  <a class="search-item__button text-button" target="_blank" href="{{ image.links.html }}" (click)="$event.stopPropagation()">View</a>
 
   <span class="search-item__status" *ngIf="image.created_at > expiredNewLabelDate">
             <i class="material-icons">
