--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -40,7 +40,7 @@
       <div class="item">
         <div class="item__content">
           <dt class="item__title"> Photo id <i class="material-icons item__icon"> low_priority </i></dt>
-          <dd class="item__value"><a [href]="image?.links" target="_blank" class="item__link link">{{ image?.id }}</a></dd>
+          <dd class="item__value"><a [href]="image?.links.html" target="_blank" class="item__link link">{{ image?.id }}</a></dd>
         </div>
       </div>
       <div class="item">
