--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -286,10 +286,26 @@
     position: relative;
     display: flex;
     align-items: center;
+
+    &--column {
+      flex-direction: column;
+      align-items: flex-start;
+      width: 100%;
+    }
   }
 
   &__checkbox {
     margin-right: 0.4rem;
+  }
+
+  &__radio {
+    margin-right: 1rem;
+    display: flex;
+    align-items: center;
+    
+    input {
+      margin-right: 0.5rem;
+    }
   }
 
   &__label {
