--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -294,6 +294,17 @@
     }
   }
 
+  &__radios {
+    display: flex;
+    flex-direction: column;
+    padding-top: 0.5rem;
+
+    @include res(desktop) {
+      flex-direction: row;
+      padding-top: 0;
+    }
+  }
+
   &__checkbox {
     margin-right: 0.4rem;
   }
@@ -302,7 +313,12 @@
     margin-right: 1rem;
     display: flex;
     align-items: center;
-    
+    margin-bottom: 0.5rem;
+
+    @include res(desktop) {
+      margin-bottom: 0;
+    }
+
     input {
       margin-right: 0.5rem;
     }
@@ -323,8 +339,17 @@
 .info {
   color: var(--primary-color);
   font-size: 0.875rem;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-left: 2px solid var(--primary-color);
 
-  &::first-letter {
+  .material-icons {
+    margin-right: 0.5rem;
+    @include gradient-overlay();
+  }
+
+  span::first-letter {
     text-transform: capitalize;
   }
 }
